--- a/OnTheMap/Base.lproj/Main.storyboard
+++ b/OnTheMap/Base.lproj/Main.storyboard
@@ -1,39 +1,79 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Ac0-7m-gI0">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="ufC-wZ-h7g">
+        <!--Item 2-->
+        <scene sceneID="YCD-6v-Hss">
             <objects>
-                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModule="OnTheMap" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="NJb-9g-bWY" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
-                        <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
+                        <viewControllerLayoutGuide type="top" id="D4I-FA-ACZ"/>
+                        <viewControllerLayoutGuide type="bottom" id="oDn-yc-M13"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
+                    <view key="view" contentMode="scaleToFill" id="srW-F3-Gn3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item 2" id="e36-xm-y2H"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Kah-QO-55A" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="403" y="1093"/>
+        </scene>
+        <!--Map-->
+        <scene sceneID="i9p-Fa-ixQ">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="OjX-Wu-3eX" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController title="Map" id="G2F-yb-i40" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="C1k-ZJ-ZNM"/>
+                        <viewControllerLayoutGuide type="bottom" id="B6j-Z2-raY"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="isk-kd-ugJ">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="1lv-1d-aLe">
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="2Ck-Jg-N1H">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                             </mapView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="1lv-1d-aLe" firstAttribute="bottom" secondItem="2fi-mo-0CV" secondAttribute="top" id="BQs-5v-lCV"/>
-                            <constraint firstItem="1lv-1d-aLe" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="top" id="CTQ-tL-Lss"/>
-                            <constraint firstAttribute="trailing" secondItem="1lv-1d-aLe" secondAttribute="trailing" id="MQJ-in-G74"/>
-                            <constraint firstItem="1lv-1d-aLe" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="aMz-fO-kLH"/>
+                            <constraint firstAttribute="trailing" secondItem="2Ck-Jg-N1H" secondAttribute="trailing" id="DlP-v5-3Fx"/>
+                            <constraint firstAttribute="bottom" secondItem="2Ck-Jg-N1H" secondAttribute="bottom" id="Gmp-Am-kx6"/>
+                            <constraint firstItem="2Ck-Jg-N1H" firstAttribute="leading" secondItem="isk-kd-ugJ" secondAttribute="leading" id="bxB-jo-Wgz"/>
+                            <constraint firstItem="2Ck-Jg-N1H" firstAttribute="top" secondItem="isk-kd-ugJ" secondAttribute="top" id="u91-jj-mI1"/>
                         </constraints>
                     </view>
-                    <connections>
-                        <outlet property="mapView" destination="1lv-1d-aLe" id="fFA-NR-BBF"/>
-                    </connections>
+                    <tabBarItem key="tabBarItem" title="Map" image="map" id="n3I-y7-hEV"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="381" y="235"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="Sso-Je-ITy">
+            <objects>
+                <tabBarController id="Ac0-7m-gI0" sceneMemberID="viewController">
+                    <nil key="simulatedBottomBarMetrics"/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="QWM-au-59E">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="G2F-yb-i40" kind="relationship" relationship="viewControllers" id="bFV-1s-oEC"/>
+                        <segue destination="NJb-9g-bWY" kind="relationship" relationship="viewControllers" id="GH5-9d-dCh"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0Z8-vU-dcb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-417" y="762"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="map" width="32" height="32"/>
+    </resources>
 </document>
