--- a/OnTheMap/Base.lproj/Main.storyboard
+++ b/OnTheMap/Base.lproj/Main.storyboard
@@ -4,10 +4,10 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
     <scenes>
-        <!--Item 2-->
+        <!--Table-->
         <scene sceneID="YCD-6v-Hss">
             <objects>
-                <viewController id="NJb-9g-bWY" sceneMemberID="viewController">
+                <viewController id="NJb-9g-bWY" userLabel="Table" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="D4I-FA-ACZ"/>
                         <viewControllerLayoutGuide type="bottom" id="oDn-yc-M13"/>
@@ -15,9 +15,30 @@
                     <view key="view" contentMode="scaleToFill" id="srW-F3-Gn3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="rUo-wV-JyN">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="tableCell" id="wbn-hM-dbt">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="wbn-hM-dbt" id="tSw-Xc-NfF">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="rUo-wV-JyN" secondAttribute="bottom" id="0Ne-CH-V7V"/>
+                            <constraint firstItem="rUo-wV-JyN" firstAttribute="top" secondItem="srW-F3-Gn3" secondAttribute="top" id="IRO-D8-6kV"/>
+                            <constraint firstAttribute="trailing" secondItem="rUo-wV-JyN" secondAttribute="trailing" id="U8d-Z3-C4W"/>
+                            <constraint firstItem="rUo-wV-JyN" firstAttribute="leading" secondItem="srW-F3-Gn3" secondAttribute="leading" id="ZLA-fT-eG3"/>
+                        </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item 2" id="e36-xm-y2H"/>
+                    <tabBarItem key="tabBarItem" title="List" image="list" id="e36-xm-y2H"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Kah-QO-55A" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -74,6 +95,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="list" width="32" height="32"/>
         <image name="map" width="32" height="32"/>
     </resources>
 </document>
