--- a/OnTheMap/Base.lproj/Main.storyboard
+++ b/OnTheMap/Base.lproj/Main.storyboard
@@ -4,50 +4,36 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
     <scenes>
-        <!--Table-->
-        <scene sceneID="YCD-6v-Hss">
+        <!--Table View Controller-->
+        <scene sceneID="R4T-gU-Fw1">
             <objects>
-                <viewController id="NJb-9g-bWY" userLabel="Table" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="D4I-FA-ACZ"/>
-                        <viewControllerLayoutGuide type="bottom" id="oDn-yc-M13"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="srW-F3-Gn3">
+                <tableViewController id="T7h-Oa-9Yb" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="M6E-gM-ICD">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="rUo-wV-JyN">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="tableCell" id="wbn-hM-dbt">
-                                        <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="wbn-hM-dbt" id="tSw-Xc-NfF">
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                </prototypes>
-                            </tableView>
-                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstAttribute="bottom" secondItem="rUo-wV-JyN" secondAttribute="bottom" id="0Ne-CH-V7V"/>
-                            <constraint firstItem="rUo-wV-JyN" firstAttribute="top" secondItem="srW-F3-Gn3" secondAttribute="top" id="IRO-D8-6kV"/>
-                            <constraint firstAttribute="trailing" secondItem="rUo-wV-JyN" secondAttribute="trailing" id="U8d-Z3-C4W"/>
-                            <constraint firstItem="rUo-wV-JyN" firstAttribute="leading" secondItem="srW-F3-Gn3" secondAttribute="leading" id="ZLA-fT-eG3"/>
-                        </constraints>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="List" image="list" id="e36-xm-y2H"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Kah-QO-55A" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="tableCell" id="ojg-kl-JhB">
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ojg-kl-JhB" id="RTv-nk-P2O">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="T7h-Oa-9Yb" id="LfY-gg-SZb"/>
+                            <outlet property="delegate" destination="T7h-Oa-9Yb" id="Y1A-ft-XRl"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="Nbv-gR-eIC"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gBh-yg-PZZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="403" y="1093"/>
+            <point key="canvasLocation" x="1170" y="1083"/>
         </scene>
         <!--Map-->
         <scene sceneID="i9p-Fa-ixQ">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="OjX-Wu-3eX" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController title="Map" id="G2F-yb-i40" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="C1k-ZJ-ZNM"/>
@@ -69,10 +55,11 @@
                             <constraint firstItem="2Ck-Jg-N1H" firstAttribute="top" secondItem="isk-kd-ugJ" secondAttribute="top" id="u91-jj-mI1"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Map" image="map" id="n3I-y7-hEV"/>
+                    <navigationItem key="navigationItem" id="0Sc-zw-Xde"/>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="OjX-Wu-3eX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="381" y="235"/>
+            <point key="canvasLocation" x="1182" y="383"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="Sso-Je-ITy">
@@ -85,13 +72,51 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
-                        <segue destination="G2F-yb-i40" kind="relationship" relationship="viewControllers" id="bFV-1s-oEC"/>
-                        <segue destination="NJb-9g-bWY" kind="relationship" relationship="viewControllers" id="GH5-9d-dCh"/>
+                        <segue destination="lfa-w1-fIH" kind="relationship" relationship="viewControllers" id="bFV-1s-oEC"/>
+                        <segue destination="XeK-nY-VtS" kind="relationship" relationship="viewControllers" id="QRR-6Z-fVK"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0Z8-vU-dcb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-417" y="762"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="py6-qh-nDd">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="lfa-w1-fIH" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="" image="map" id="n3I-y7-hEV"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="ohX-LM-kzu">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="G2F-yb-i40" kind="relationship" relationship="rootViewController" id="IZI-UL-Zwz"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Or9-GA-ES2" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="370" y="383"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="xha-at-pHl">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="XeK-nY-VtS" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="" image="list" id="Kj6-Bo-kLF" userLabel="Table"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Zmb-27-sb0">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="T7h-Oa-9Yb" kind="relationship" relationship="rootViewController" id="Ut7-XA-Bm0"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="PCY-TS-6VD" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="358" y="1083"/>
         </scene>
     </scenes>
     <resources>
